@@ -8,6 +8,9 @@ Changes - Apache::Test change logfile
 
 =item 1.10-dev
 
+Generated Listen directive now listen on 0.0.0.0 to force using
+IPv4 addresses on IPv6 systems until LWP supports IPv6. [Gozer]
+
 improved docs [David Wheeler <david@kineticode.com>]
 
 Add a virtual method Apache::TestRun::pre_configure, and fix the
